included date component, finished styling title-date div

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,9 @@
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
-    <script src="//use.edgefonts.net/kaushan-script.js"></script>
-    <script src="//use.edgefonts.net/economica.js"></script>
-    <script src="//use.edgefonts.net/stencil-std.js"></script>
-    <script src="//use.edgefonts.net/source-sans-pro.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Quicksand" rel="stylesheet">
+
 
 
   </head>
